<resources>
    <string name="app_name">Iidea</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="registration_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="profile_label_editing">Profile Fragment Editing</string>
    <string name="profile_label_view">Profile Fragment View</string>
    <string name="profile_label">Profile Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="TODO">TODO</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="Edit">Edit</string>
    <string name="Description">Описание</string>
    <string name="Email">Эл. почта: %1$s</string>
    <string name="MyProjects">Мои проекты</string>
    <string name="DateOfBirth">День рождения</string>
    <string name="MySubs">Мои подписки</string>
    <string name="UploadResume">Загрузить описание</string>
    <string name="Projects">Проекты</string>
    <string name="Status">Статус: %1$s</string>
    <string name="Profile">Профиль</string>
    <string name="Search">Поиск</string>
    <string name="Birthday">День рождения: %1$s</string>
    <string name="PhoneNumber">Телефон: %1$s</string>
    <string name="Interesting">Subs</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="projectName">Проект: %1$s</string>
    <string name="projectState">Статус: %1$s</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="feed">Лента</string>
    <string name="new_project">Новый проект</string>
    <string name="newProjectName">Название проекта</string>
    <string name="newProjectDescription">Описание проекта</string>
    <string name="newProjectType">Категория проекта</string>
    <string name="category_it">IT</string>
    <string name="category_culture">Culture</string>
    <string name="category_business">Business</string>
    <string name="category_history">History</string>
    <string name="userStatus_seeking">В поиске</string>
    <string name="userStatus_notSeeking">Не ищу</string>
    <string name="userStatus_working">Работаю</string>
    <string name="Save">Сохранить</string>
    <string name="Results">Результаты</string>
    <string name="Subscribe">Подписаться</string>
    <string name="newProjectChooseCategory">Выберите категорию</string>
    <string name="projectType">Категория проекта: %1$s</string>
    <string name="sendResponse">Откликнуться</string>
    <string name="project_create">Создать</string>
    <string name="HostRef">Организатор: %1$s</string>
    <string name="Responses">Отклики</string>
    <string name="Response">Отклик</string>
    <string name="FromUser">От пользователя:</string>
    <string name="ProjectFrom">Проект:</string>
    <string name="RejectResponse">Отклонить отклик</string>
    <string name="NoResponses"> Нет откликов</string>
    <string name="project">Проект</string>
    <string name="edit_host_project">Edit</string>
    <string name="project_status_new">New</string>
    <string name="project_status_finished">Finished</string>
    <string name="project_status_in_progress">In progress</string>
    <string name="project_status_search">Search</string>
    <string name="Delete">Удалить</string>
    <string name="Unsubscribe">Отписаться</string>
    <string name="WriteMessage">Написать сообщение</string>
    <string name="emailSign">Эл. почта</string>
    <string name="PhoneSign">Телефон</string>
    <string name="Socials">Соцсети</string>
    <string name="Vk">Вконтакте</string>
    <string name="Inst">Инстаграм</string>
</resources>