<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue" >

        <ImageButton
            android:id="@+id/projectNotHostViewHeadLineBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/back_button_image"/>

        <TextView
            android:id="@+id/projectNotHostView_head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:text = "@string/Edit"
            android:textColor="@color/white"
            android:textSize="27sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newProjectDescription"
                android:textColor="@color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/projectNotHostViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/Edit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/projectNotHostViewStatus"
                android:textSize="27sp"
                android:textColor="@color/black"
                android:text="@string/Status" />

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/projectNotHostViewCategory"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/projectType"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/projectNotHostViewToHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Edit"
                android:textSize="27sp"/>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createProject"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/sendResponse" />
    </RelativeLayout>

</LinearLayout>