<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <LinearLayout
        android:id="@+id/profileHeadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/profileInfoScrollView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profileViewHeadLineName"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:text="@string/Edit"
            android:textSize="27sp"/>

        <ImageButton
            android:id="@+id/profileViewHeadLinePhoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/profileInfoScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeadLine"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/profileParametres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileViewUserStatusHead"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/profileViewUserStatus"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Edit"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/profileViewDateOfBirthHead"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DateOfBirth"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/profileViewDateOfBirth"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Edit"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/profileViewEmailHead"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/profileViewEmail"
                android:text="@string/Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="#0000FF"
                android:onClick="onEmailClick"
                android:focusable="true"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/profileViewDescriptionHead"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/profileViewDescription"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Edit"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/profileViewMyProjectsText"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Projects"
                android:textSize="24sp"/>

            <LinearLayout
                android:id="@+id/profileViewProjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>