<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <LinearLayout
        android:id="@+id/profileHeadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/profileInfoScrollView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profileHeadLineName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:text=""
            android:textSize="27sp"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/profileInfoScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeadLine"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/profileParametres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileUserStatus"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = ""
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <Button
                android:id="@+id/profileUserStatusChangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_button"
                android:textColor="@color/blue"
                android:text="@string/Edit"/>

            <TextView
                android:id="@+id/profileEmailSign"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailSign"
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/profileEmail"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/profilePhoneSign"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PhoneSign"
                android:textColor="@color/black"
                android:textSize="21sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="5dp">

                <EditText
                    android:id="@+id/profilePhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="21sp"/>

                <Button
                    android:id="@+id/savePhoneNumberButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/blue_button"
                    android:textColor="@color/blue"
                    android:text="@string/Save"/>

            </LinearLayout>

            <Button
                android:id="@+id/profileUploadResumeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/UploadResume"
                android:background="@drawable/blue_button"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/profileMySubsText"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MySubs"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <LinearLayout
                android:id="@+id/profileListOfSubs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:id="@+id/profileMyProjectsText"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MyProjects"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <LinearLayout
                android:id="@+id/profileMyProjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>