<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/projectHostViewHeadLineBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button_image"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/myProjects_head_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/project"
                android:textColor="@color/white"
                android:textSize="27sp"/>

        </LinearLayout>

        <TextView
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editProject"
            android:text="@string/edit_host_project"
            android:textColor="@color/white"
            android:textSize="27sp"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="2dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/project_host_view_scroll_view">

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/projectHostViewDeleteProjectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/Delete"
            android:textSize="24sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

</LinearLayout>