<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <LinearLayout
        android:id="@+id/responsesHeadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/responsesScrollView"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ResponseViewHeadLineBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/back_button_image"/>

        <TextView
            android:id="@+id/profileHeadLineName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Response"
            android:textSize="27sp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/responsesScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeadLine"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/responsesOnMyProjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text ="@string/ProjectFrom"
                    android:textColor="@color/black"
                    android:textSize="27sp"/>

                <TextView
                    android:id="@+id/responseViewProjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FromUser"
                    android:textColor="@color/black"
                    android:textSize="27sp"/>

                <TextView
                    android:id="@+id/responseViewToUserPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="24sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginVertical="5dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/RejectResponse"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/rejectResponseButton"/>
    </RelativeLayout>
</LinearLayout>